--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,33 @@
+@import '../node_modules/antd/dist/antd.css';
 .App {
-  text-align: center;
+  min-height: 100vh;
+  width: 100%;
+  background-color: #32333d;
+}
+#components-layout-demo-custom-trigger .trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+#components-layout-demo-custom-trigger .trigger:hover {
+  color: #1890ff;
+}
+
+#components-layout-demo-custom-trigger .logo {
+  height: 32px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px;
+}
+.site-layout{
+  background-color: #61dafb;
+}
+
+.site-layout .site-layout-background {
+  background: #33333d;
+
 }
 
 .App-logo {
@@ -35,4 +63,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.heading1{
+  width: 100%;
+  height: 70px;
+  background-color: #33333d;
+  //border: 1px solid #dd3f77;
+  color: white;
+  text-align: center;
+}
+.ant-layout-sider-children{
+  background-color: #424250;
+  border: 1px solid powderblue;
+}
+.innerCard{
+  margin: 15px 5px 5px 15px;
+  background-color: #33333d;
+  border-color: #dd3f77 ;
+
+}
+.Input{
+  display: flex;
 }
