--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 .App {
   min-height: 100vh;
   width: 100%;
-  background-color: #32333d;
+  background-color: #33333d;
 }
 #components-layout-demo-custom-trigger .trigger {
   font-size: 18px;
@@ -30,16 +30,6 @@
 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -81,6 +71,7 @@
   margin: 15px 5px 5px 15px;
   background-color: #33333d;
   border-color: #dd3f77 ;
+  box-shadow: 0 15px 15px 0 ;
 
 }
 .Input{
