--- a/src/App.css
+++ b/src/App.css
@@ -58,9 +58,10 @@
 .heading1{
   width: 100%;
   height: 70px;
-  background-color: #dd3f77;
+  background-color: #aa0a40;
   padding-top: 8px;
-  border: 1px solid white;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
   color: white;
   text-align: center;
 }
